Changed height of lightbox to hardcoded px value (vs 100%). This prevents lightbox from being cut off due to too-small browser viewport.

--- a/sitedev/js/fancybox/jquery.fancybox-1.3.1.css
+++ b/sitedev/js/fancybox/jquery.fancybox-1.3.1.css
@@ -146,7 +146,7 @@
 #fancybox-frame {
 	position: relative;
 	width: 100%;
-	height: 100%;
+	height: 580px;
 	border: none;
 	display: block;
 }
